--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <manifest package="org.qtproject.example" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="-- %%INSERT_VERSION_NAME%% --" android:versionCode="-- %%INSERT_VERSION_CODE%% --" android:installLocation="auto">
 
+    <!-- This won't work as expected on newer Android releases -->
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" /> 
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     
     <!-- The following comment will be replaced upon deployment with default permissions based on the dependencies of the application.
